# sarod

./: .gitignore  README.md  makefile  sarod_firestore.json.age  secret.age  次にするべきこと.md
api/: .dockerignore  Cargo.toml  Dockerfile  makefile
api/examples/: generate.rs
api/src/: api.rs  auth.rs  collection.rs  main.rs
awscdk/: cdk.json  makefile  package-lock.json  package.json
awscdk/lib/: awscdk-stack.ts  surfic.com.txt
awscdk/test/: awscdk.test.ts
converter/: .dockerignore  Cargo.toml  Dockerfile  makefile
converter/src/: main.rs
frontend/: globals.css  makefile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  指南TAILWIND.md
frontend/app/: Base.tsx  Provider.tsx  layout.tsx  page.tsx  sign.tsx
frontend/app/(app)/: layout.tsx
frontend/app/home/: layout.tsx  page.tsx
frontend/app/palette/: page.tsx
frontend/app/register/: page.tsx
frontend/app/sandbox/: page.tsx
frontend/public/: demo_textured.glb
frontend/src/: AuthProvider.tsx  cookie.ts  jwt.ts  redirect.tsx  standard.ts
frontend/stateless_ui/: Button.tsx  Container.tsx  FormControls.tsx  IconWithLabel.tsx  ImageUploadUI.tsx  Message.tsx  PlanSelectionUI.tsx  Profile.tsx  Redirect.tsx  SideLayout.tsx  SignInUp.tsx  SlideSwitch.tsx  Subscription.tsx  Sushi3D.tsx  TabsWithDataKey.tsx  Thumbnail.tsx  TwitterHome.tsx  sign.tsx  withDataKey.tsx
lambda/: Cargo.toml  Dockerfile  makefile
lambda/examples/: generate.rs
lambda/src/: api.rs  auth.rs  collection.rs  main.rs
openapi/: main.tsp  makefile  package-lock.json  package.json  tspconfig.yaml
proxy/: makefile
(+10 files in other folders)
