[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[features]
frontend = ["rust-embed"]

[dependencies]
mandolin = "0.2.0"
serde= {version="*", features = ["derive"]}
serde_json= "*"
axum = { version = "*", features = ["multipart"]}
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros", "signal"] }
rust-embed = { version = "^8", optional=true }
mime_guess = "*"
firestore = { version="*" }
rustls = { version = "*", default-features = false, features = ["ring"] }
uuid = { version = "*", features = ["serde", "v7"] }